[package]
description = "Bộ gõ tiếng Việt mã nguồn mở đa hệ điều hành Gõ Key"
edition = "2021"
name = "goxkey"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-foundation = "0.9.3"
core-graphics = "0.22.3"
env_logger = "0.10.0"
foreign-types = "0.3.2"
libc = "0.2.139"
log = "0.4.17"
vi = "0.3.5"
bitflags = "1.3.2"
druid = "0.7.0"
once_cell = "1.17.0"
rdev = "0.5.2"

[package.metadata.bundle]
copyright = "Copyright (c) Huy Tran 2023. All rights reserved."
icon = ["icons/icon.icns", "icons/icon.png"]
identifier = "com.goxkey.ui"
name = "Gõ Key"
version = "0.0.1"
